src/render/assets/css/launcher.css
/* ... */
/* =============== SideBar View =============== */

.sidebarView {
    display: flex;
    flex-direction: row;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
}

.sidebar-region {
    background-color: var(--sbw-background-side);
    display: flex;
    flex-direction: row;
    user-select: none;
    overflow: hidden scroll;
}

.sidebarView .sidebar-region {
    flex: 1 0 220px;
    justify-content: flex-end;
    background-color: var(--sbw-background-side);
}
:root.more-border .sidebarView .sidebar-region {
    border-right: 1px solid var(--border-color-1);
}
.sidebar-region::-webkit-scrollbar {
    width: 4px;
}

.sidebar-region::-webkit-scrollbar-thumb {
    background-color: transparent;
}

.sidebar-region:hover::-webkit-scrollbar-thumb {
    background-color: rgb(170, 170, 170, 0.7);
}

.sidebar-region .sidebar {
    width: 220px;
    padding: 60px 6px 60px 20px;
}

.sidebar .item,
.content .item {
    display: flex;
    align-items: center;
    white-space: nowrap;
    text-overflow: ellipsis;
    /* overflow: hidden; */
    border-radius: 5px;
    flex-shrink: 0;
    font-weight: 500;
    text-align: start;
    font-family: var(--font-primary);
}

.sidebar .item span,
.content .item span {
    white-space: inherit;
    text-overflow: inherit;
    overflow: inherit;
    font-weight: inherit;
    flex: 1;
}

.navItem {
    border-radius: 2px;
    transition: .1s all;
    padding: 6px 10px;
    position: relative;
    font-size: 16px;
    line-height: 20px;
    cursor: pointer;
    color: var(--interactive-normal);
    min-height: 28px;
    margin-bottom: 1px;
    margin-left: 8px;
    visibility: visible;
}

.navItem:hover {
    color: var(--interactive-hover);
    background-color: var(--background-modifier-hover);
}

.navItem.selected {
    cursor: default;
    color: var(--interactive-active) !important;
    background-color: var(--background-modifier-selected) !important;
}

.navItem.processing {
    /* color: var(--brand-color) !important; */
}

.navItem.noAction {
    cursor: default;
}

.navItem .button {
    visibility: hidden;
}
.navItem:hover .button {
    visibility: visible;
}

.header {
    padding: 6px 10px;
    font-size: 12px !important;
    /*font-weight: 700 !important;*/
    line-height: 16px;
    text-transform: uppercase;
    flex: 0 0 auto;
    color: #8e9297;
}

.separator {
    margin: 8px 10px;
    height: 1px;
    background-color: var(--background-modifier-accent);
}

.sidebarView .content-region {
    background: var(--sbw-background-main);
    flex: 1 1 800px;
    display: flex;
    align-items: flex-start;
    overflow: hidden;
}

.content-region > .transitionWrap {
    flex: 1;
    height: 100%;
    width: 100%;
}

.content-region > .transitionWrap > .content {
    height: 100%;
    overflow: hidden scroll;
}

[data-type=async-component] {
    display: block;
    position: relative;
    width: 100%;
    height: 100%;
}

.h100 {
    height: 100%;
}
.w100 {
    width: 100%;
}


/*.content-region .content::-webkit-scrollbar-thumb {
    background-color: transparent;
}*/


/*.content-region .content:hover::-webkit-scrollbar-thumb {
    background-color: rgb(170, 170, 170, 0.7);
}*/

h2 {
    /* text-transform: uppercase; */
    font-size: 20px;
    font-weight: 700;
    line-height: normal;
    color: var(--header-primary);
}

h5 {
    text-transform: uppercase;
    font-size: 12px;
    font-weight: 700;
    line-height: 16px;
}

.content-region .content h2 {
    font-size: 1.5em;
    margin-bottom: 20px;
    line-height: 1;
    color: var(--header-primary);
    padding: 12px 8px;
}

.content-region .content h5 {
    margin-bottom: 8px;
    color: var(--header-secondary);
}


.content-region .content .tab {
    position: relative;
    padding: 60px 24px 40px 40px;
    flex: 1 1 auto;
    max-width: 740px;
    min-width: 460px;
    min-height: 100%;
    margin: 0;
}
.content-region .content.centred .tab {
    margin: 0 calc(15% - 75px);
}

.content .separator {
    margin: 40px 0;
}


.layerContainer {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: none!important;
    pointer-events: none;
    z-index: 1002;
}


.divider {
    margin: 20px 0 0 0 !important;
}

.mr8 {
    margin: 8px 0;
}
.m0 {
    margin: 0;
}




/* === app === */

#app-mount,
body,
html {
    width: 100%;
    height: 100%;
}

#app-mount,
body {
    background-color: var(--background-tertiary);
    text-rendering: optimizeLegibility;
}

#app-mount {
    position: absolute;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    /* transition: .3s; */
}

.app {
    position: relative;
    -webkit-box-flex: 1;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    z-index: auto;
}

.app-container {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: var(--background-tertiary);
    display: flex;
    flex-direction: column;
    transition: transform 0.25s cubic-bezier(.65,-0.3,0.3,1.3), opacity 0.35s ease;
    z-index: 1;
}

.app-container:not(.open) {
    transform: scale(0.93) translateZ(0px);
    opacity: 0;
}

:root.platform-win .preloader,
:root.platform-linux .preloader {
    top: -22px;
}

:root.fullscreen .preloader {
    top: 0;
}

:root.platform-win .frame-fix,
:root.platform-linux .frame-fix {
    top: 22px;
}
:root.fullscreen .frame-fix {
    top: 0;
}

.connectionStateHeader {
    position: absolute;
    top: 0;
    left: 0;
    height: 2rem;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(135deg, var(--brand-color), var(--brand-color-2));
    padding: 0 1rem;
    font-weight: 500;
    z-index: 1;
    font-size: .875rem;
    color: #fff;
    transition: .3s ease;
    transform: translateY(-100%);
    pointer-events: none;
    opacity: 0.95;
}

.connectionStateHeader.open {
    transform: translateY(0);
}

.connectionStateHeader span {
    line-height: 100%;
}
/* ... */

